player controls container doesnt align correctly with subtitle bar due to its display: table

--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -1536,7 +1536,7 @@ footer a:hover{
 
 #river_player .player_controls_container {
   display: table;
-  width: 100%;
+  width: 101%;
   background-color: black;
   min-height: 30px;
 }
